Added personal touches to fresh code repo. page.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <link href="screen.css" media="screen" rel="stylesheet" type="text/css" />
-    <title>YOUR NAME</title>
+    <title>Gabriel McFarlane</title>
   </head>
   <body class="index">
     <div id="main" role="main">
-      <h1>Your Name</h1>
-      <p>One sentence about what this is.</p>
+      <h1>Gabriel McFarlane</h1>
+      <p1>This is my repository for all my upcomming code projects!</p1>
     </div>
   </body>
 </html>
