Add structure for basic project display

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <div id="main" role="main">
       <h1>Gabriel McFarlane</h1>
       <p1>This is my repository for all my upcomming code projects!</p1>
+      <div class="project">
+        <img src="screenshot">
+        <h2>Random Walk</h2>
     </div>
   </body>
 </html>
